--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-geopandas>=0.12.0
-pandas>=1.5.0
-numpy>=1.22.0
-matplotlib>=3.5.0
-folium>=0.14.0
-pyyaml>=6.0
-shapely>=2.0.0
-pytest>=7.0.0
-jupyter>=1.0.0
+pandas>=1.3.0
+geopandas>=0.10.0
+shapely>=1.8.0
+networkx>=2.6.0
+folium>=0.12.0
+numpy>=1.20.0
+matplotlib>=3.4.0
